--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react_spacex",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "App that lists SpaceX launch missions",
   "main": "server.js",
   "scripts": {
@@ -26,7 +26,8 @@
     "express": "^4.16.4",
     "express-graphql": "^0.7.1",
     "graphql": "^14.0.2",
-    "react-router-dom": "^4.3.1"
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "^2.1.1"
   },
   "devDependencies": {
     "nodemon": "^1.18.7"
